<resources>
    <string name="app_name">toprestaurants</string>
    <string name="title_activity_restaurants_list_view">RestaurantsListView</string>
    <string name="sure">Are you sure?</string>
    <string name="delete_customer">Delete customer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_reserve">Delete reserve</string>
    <string name="delete_restaurant">Delete restaurant</string>
    <string name="customer">Customer</string>
    <string name="modify_customer">Modify customer</string>
    <string name="error_message">An error has occurred</string>
    <string name="modify_reserve">Modify reserve</string>
    <string name="modify_restaurant">Modify restaurant</string>
    <string name="customer_register">Customer has been registered</string>
    <string name="select_option">Select an option</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_picture">Choose a picture from gallery</string>
    <string name="reserve_register">Reserve has been registered</string>
    <string name="location_selection">Select a location on map</string>
    <string name="restaurant_register">Restaurant has been registered</string>
    <string name="reserve">Reserve</string>
    <string name="restaurant">Restaurant</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="telephone">Telephone</string>
    <string name="birth_date">Birth Date</string>
    <string name="vip">VIP</string>
    <string name="return_button">RETURN</string>
    <string name="customers">CUSTOMERS</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="fav_restaurants">FAVOURITES</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="how_many_people">How many people?</string>
    <string name="how_many_tables">How many tables?</string>
    <string name="reserve_date">Reserve date</string>
    <string name="paid">Paid</string>
    <string name="allergic_people">Allergic people</string>
    <string name="type">Type</string>
    <string name="timetable">Timetable</string>
    <string name="reserve_price">Reserve price</string>
    <string name="vegan_menu">Vegan menu</string>
    <string name="website">Website</string>
    <string name="save_button">Save</string>
    <string name="select_customer">Select customer</string>
    <string name="select_restaurant">Select restaurant</string>
    <string name="people">People</string>
    <string name="tables">Tables</string>
    <string name="add_fav_restaurant_button">Fav</string>
    <string name="see_details_button">See details</string>
    <string name="modify_button">Modify</string>
    <string name="delete_button">Delete</string>
</resources>