<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.customers.RegisterCustomerView">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_reserve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="saveButton"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="goBackButton"
            android:text="@string/return_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSelectCustomerName"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:text="@string/select_customer" />

        <Spinner
            android:id="@+id/spinner_reserve_customer_name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textViewSelectRestaurantName"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:text="@string/select_restaurant" />

        <Spinner
            android:id="@+id/spinner_reserve_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/edit_text_reserve_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/how_many_people"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_reserve_tables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/how_many_tables"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_reserve_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reserve_date"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/check_box_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paid" />

        <CheckBox
            android:id="@+id/check_box_allergic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allergic_people" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>