<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.restaurants.ModifyRestaurantView">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_modify_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_restaurant_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_restaurant_timetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/timetable"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_restaurant_reserveprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reserve_price"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/check_box_modify_veganmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vegan_menu" />

        <EditText
            android:id="@+id/edit_text_modify_restaurant_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/website"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/confirm_modify_restaurant_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="modifyRestaurantButton"
            android:text="@string/confirm_button" />

        <Button
            android:id="@+id/cancel_modify_restaurant_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="cancelModifyButton"
            android:text="@string/cancel_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>