<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.reserves.ModifyReserveActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_modify_reserve_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/how_many_people"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_reserve_tables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/how_many_tables"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_reserve_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reserve_date"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/check_box_modify_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paid" />

        <CheckBox
            android:id="@+id/check_box_modify_allergic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allergic_people" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <Button
            android:id="@+id/confirm_modify_reserve_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="modifyReserveButton"
            android:text="@string/confirm_button" />

        <Button
            android:id="@+id/cancel_modify_reserve_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="cancelModifyButton"
            android:text="@string/cancel_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>