<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.customers.ModifyCustomerView">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_modify_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_customer_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_customer_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telephone"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_modify_customer_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birth_date"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/check_box_modify_vip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vip" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/confirm_modify_customer_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="#ECD0FE"
            android:onClick="modifyCustomerButton"
            android:text="@string/confirm_button"
            android:textColor="#5C1349"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/cancel_modify_customer_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="#ECD0FE"
            android:onClick="cancelModifyButton"
            android:text="@string/cancel_button"
            android:textColor="#5C1349"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>