<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCustomerName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/customer" />

            <TextView
                android:id="@+id/tv_reserve_customername_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRestaurantName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/restaurant" />

            <TextView
                android:id="@+id/tv_reserve_restaurantname_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPeople"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/people" />

            <TextView
                android:id="@+id/tv_reserve_people_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTables"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tables" />

            <TextView
                android:id="@+id/tv_reserve_tables_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewReserveDate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reserve_date" />

            <TextView
                android:id="@+id/tv_reserve_date_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewIsPaid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/paid" />

            <CheckBox
                android:id="@+id/cb_reserve_paid_details"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAllergic"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/allergic_people" />

            <CheckBox
                android:id="@+id/cb_reserve_allergic_details"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="goBackButton"
            android:padding="5dp"
            android:text="@string/return_button"
            android:textColor="#F6F2F3"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>