<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/reserve_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reserve_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reserve_details_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:text="@string/see_details_button" />

        <Button
            android:id="@+id/modify_reserve_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:text="@string/modify_button" />

        <Button
            android:id="@+id/delete_reserve_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:text="@string/delete_button" />
    </LinearLayout>

</LinearLayout>