<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_restaurant_name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:id="@+id/tv_restaurant_type_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTimetable"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/timetable" />

            <TextView
                android:id="@+id/tv_restaurant_timetable_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textReservePrice"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reserve_price" />

            <TextView
                android:id="@+id/tv_restaurant_reserveprice_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewVeganMenu"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/vegan_menu" />

            <CheckBox
                android:id="@+id/cb_restaurant_veganmenu_details"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWebsite"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/website" />

            <TextView
                android:id="@+id/tv_restaurant_website_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#1A0342"
            android:onClick="goBackButton"
            android:padding="5dp"
            android:text="@string/return_button"
            android:textColor="#F6F2F3"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>